# rust-aws-lambda-playground

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/actions/get-util-execs/: action.yml
.github/workflows/: build-deploy.yml  deploy-migrations.yml  deploy-rest-api.yml  deploy.yml  get-util-execs.yml  migrate-latest.yml  undo-migrate.yml
backend_logic/: Cargo.toml
backend_logic/src/: lib.rs
lambda/: Cargo.toml
lambda/src/: main.rs
migrations/: 20250731154659_initial_migration.down.sql  Cargo.toml  bootstrap  current_version.txt  migrate.sh
migrations/sql/: 0001_initial_migration.sql  0002_insecure_auth.sql  20250731154659_initial_migration.up.sql  20250801145502_add_maintainer_log.down.sql  20250801145502_add_maintainer_log.up.sql
migrations/src/: main.rs
rest-api/: Cargo.toml
rest-api/src/: auth.rs  main.rs  todos.rs  utils.rs
server/: Cargo.toml
server/src/: main.rs
src/: main.rs  todos.rs
