[package]
name = "rust_aws_lambda"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
dotenvy = "0.15"
env_logger = "0.11"
lambda_http = "0.13.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
